--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="animation.css" />
-    <link rel="stylesheet" href="responsive.css" />
+    <script
+      src="https://kit.fontawesome.com/519da55f64.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container" id="container">
@@ -18,24 +21,23 @@
         </p>
       </div>
       <a style="text-decoration: none" href="#about" class="box box2">
-        <p>about</p>
+        <p>About</p>
       </a>
-      <a style="text-decoration: none" href="#portfolio" class="box box3">
-        <p>projects</p>
+      <a style="text-decoration: none" href="#" class="box box3">
+        <p>Portfolio</p>
       </a>
       <div class="box box4">
         <img src="\images\rocket.png" class="rocket" />
       </div>
-
       <a style="text-decoration: none" href="#" class="box box5">
-        <p>experience</p>
+        <p>Experience</p>
       </a>
-      <div class="box box6">
+      <a style="text-decoration: none" href="#" class="box box6">
         <img src="\images\heli.png" class="heli" />
-      </div>
-      <div class="box box7">
+      </a>
+      <a style="text-decoration: none" href="#" class="box box7">
         <img src="\images\blip.png" class="blip" />
-      </div>
+      </a>
       <a style="text-decoration: none" href="#" class="box box8">
         <p>game</p>
       </a>
@@ -57,26 +59,25 @@
           that I write in my mind since I was a child. My work reflects my
           childhood<br />
           of cartoons and my dog exploring nature. My favorite techniques are<br />
-          watercolors, colored pencils, and of course digital art on the iPad.
+          watercolors, colored pencils, and of course digital art on the
+          iPad.<br />
+          <br />
+          <br />
+          <a style="text-decoration: none" href="#container" class="previous">
+            Previous</a
+          >
         </p>
-        <div class="blob1">
-          <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-            <path
-              fill="#FD8A8A"
-              d="M22.7,-39.4C31.5,-34.3,42.1,-32.3,51.5,-26.3C61,-20.3,69.3,-10.1,66.4,-1.7C63.4,6.7,49.1,13.4,40.9,21.6C32.6,29.7,30.4,39.3,24.6,40.4C18.8,41.6,9.4,34.2,-1.3,36.5C-12,38.7,-24,50.6,-31.5,50.4C-39,50.3,-42.1,38.1,-45,27.7C-48,17.4,-50.9,8.7,-50.8,0.1C-50.7,-8.6,-47.6,-17.1,-41,-21.3C-34.5,-25.4,-24.4,-25.2,-17,-31.1C-9.6,-37,-4.8,-49,1.1,-50.9C7,-52.7,13.9,-44.5,22.7,-39.4Z"
-              transform="translate(100 100)"
-            />
-          </svg>
-        </div>
       </header>
+
       <iframe
-        src="https://my.spline.design/untitled-9b0f3818a32a587e9b17a88fbfd7a018/"
+        src="https://my.spline.design/untitled-984be4c7e97df2be14d81a9997901747/"
         frameborder="0"
         width="100%"
         height="100%"
       ></iframe>
     </section>
-    <div class="portfolio" id="portfolio">
+
+    <div class="portfolio">
       <div class="title">CLIQENGO</div>
       <div class="title2">
         Shop 'til you drop<br />
@@ -88,8 +89,8 @@
         best finds in fashion, electronics, homeware, and more!
       </div>
       <div class="apple">
-        <p class="ios">Get in on the</p>
-        <p class="App">App Store</p>
+        <div class="ios">Get in on the</div>
+        <div class="App">App Store</div>
         <img src="\images\apple.png" class="logo" />
       </div>
       <div class="samsung">
@@ -98,30 +99,18 @@
         <img src="\images\samsung.png" class="logo1" />
       </div>
       <div class="macbook">
-        <img src="\images\macbookair.png" class="mac" />
-        <div class="imgbg"></div>
+        <img src="\images\macbook.png" />
+        <div class="imgBx"></div>
       </div>
-      <div class="blob">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <path
-            fill="#F1F7B5"
-            d="M38.6,-58.2C51.9,-59.1,65.8,-52.6,75.5,-41.6C85.3,-30.7,90.8,-15.4,86,-2.8C81.2,9.8,66.2,19.7,55.4,28.8C44.6,37.9,38.1,46.2,29.5,56.5C21,66.8,10.5,79,2,75.6C-6.5,72.1,-13,53,-25.4,44.9C-37.7,36.8,-56,39.8,-66.3,34.2C-76.7,28.6,-79.3,14.3,-76,1.9C-72.7,-10.5,-63.5,-20.9,-56.7,-32.8C-50,-44.6,-45.5,-57.9,-36.4,-59.4C-27.4,-61,-13.7,-50.9,-0.5,-50C12.6,-49.1,25.3,-57.3,38.6,-58.2Z"
-            transform="translate(100 100)"
-          />
-        </svg>
-      </div>
-      <p class="hover">
-        hover to<br />
-        scroll !
-      </p>
+      <img src="\images\blob.png" class="blob" />
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
       var typed = new Typed(".auto-type", {
-        strings: ["Ivana", "a designer", "an illustrator"],
-        typeSpeed: 100,
-        backSpeed: 100,
+        strings: ["Ivana", "an artist", "a designer"],
+        typeSpeed: 150,
+        backSpeed: 150,
         loop: true,
       });
     </script>
