--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="animation.css" />
+    <link rel="stylesheet" href="responsive.css" />
     <script
       src="https://kit.fontawesome.com/519da55f64.js"
       crossorigin="anonymous"
@@ -99,7 +100,7 @@
         <img src="\images\samsung.png" class="logo1" />
       </div>
       <div class="macbook">
-        <img src="\images\macbook.png" />
+        <img src="\images\macbook.png" class="mac" />
         <div class="imgBx"></div>
       </div>
       <img src="\images\blob.png" class="blob" />
